<resources>
    <string name="app_name">Design Support Lib Demo</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Drawer related strings BEGIN -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">Loading…</string>
    <string name="action_games">Games</string>
    <string name="action_music">Music</string>
    <string name="action_movies">Movies</string>
    <!-- Nav Drawer related strings END -->

    <!-- Settings related string BEGIN -->
    <string name="about_category">About</string>
    <string name="build_key">build</string>
    <string name="build_title">Build Version</string>
    <string name="build_summary">Version 1.0</string>
    <string name="organization_key">organization</string>
    <string name="organization_title">Developed By</string>
    <string name="organization_summary">Grip X Tech</string>
    <string name="contact_category">Contact</string>
    <string name="contact_key">contact</string>
    <string name="contact_title">Email Us</string>
    <string name="contact_summary">contact@gripxtech.in</string>
    <string name="social_category">Social</string>
    <string name="share_key">share</string>
    <string name="share_title">Share</string>
    <string name="rate_key">rate</string>
    <string name="rate_title">Rate</string>
    <string name="more_apps_key">more_apps</string>
    <string name="more_apps_title">More Apps</string>
    <!-- Settings related string END -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
